...
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="image_of_requesting_user">Image of requesting user</string>
    <string name="tutee">tutee</string>
    <string name="image_of_tutee">image_of_tutee</string>
    <string name="COMS410">COMS410</string>

    <string-array name="courses">
        <item>Object-oriented Programming</item>
        <item>Data Structure</item>
        <item>C for Programmers</item>
        <item>Python for Programmers</item>
        <item>Software Testing</item>
        <item>English Reading</item>
        <item>English Writing</item>
        <item>English Speaking</item>
        <item>High School Algebra</item>
        <item>Calculus</item>
        <item>Trigonometry</item>
        <item>Linear Algebra</item>
        <item>Classicl Mechanics</item>
        <item>Electricity and Magnetism</item>
    </string-array>

    <string-array name="tutors">
        <item>Leon Olivier</item>
        <item>Willie Hart</item>
        <item>Ismail Corneliussen</item>
        <item>Sander Hansen</item>
        <item>John Vis</item>
        <item>David Cooper</item>
        <item>Edger Thomas</item>
...
