<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/class_id"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:paddingLeft="20dp"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        android:text="course id">
    </TextView>

    <TextView
        android:id="@+id/class_name"
        android:layout_width="match_parent"
        android:gravity="left"
        android:layout_height="60dp"
        android:paddingLeft="30dp"
        android:textSize="20sp"
        android:text="course name">
    </TextView>

</androidx.appcompat.widget.LinearLayoutCompat>